# 52840

./: CMakeLists.txt  commit.md  nrf52840dk_nrf52840.overlay  prj.conf
app/: main.c
app/demo_kernel_code/inc/: gh3x2x_demo_config.h
app/demo_kernel_code/src/: gh3x2x_demo.c  gh3x2x_demo_hook.c  gh3x2x_demo_reg_array.c  gh3x2x_demo_user.c
app/gh3221lib/: gh3x2x_drv.h
app/user_driver/inc/: buttons.h  led.h
app/user_driver/src/: buttons.c  led.c
